--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [info]
-email = 
-password = 
+email =13632633675
+password =Huohua123
 
 [cookies]
 z_c0 =
@@ -12,3 +12,21 @@ __utmv =
 __utmc =
 __utmb =
 __utma =
+
+[db]
+host = 121.41.75.213
+port = 3306
+user = yangjw
+passwd = Huohua123
+db = ZHIHUHOT_FULL_DATA
+charset = utf8
+use_unicode = True
+
+[cookie]
+cookie =
+
+[question_thread_amount]
+question_thread_amount = 1
+
+[topic_thread_amount]
+topic_thread_amount = 1
